--- a/_site.yml
+++ b/_site.yml
@@ -1,9 +1,12 @@
 name: "personal-website"
 output_dir: "."
 navbar:
-  title: "Personal Website"
-  left:
-    - text: "Home"
+   left:
+    - text: "Sarah George"
       href: index.html
     - text: "Research"
       href: about.html
+    - text: "Teaching"
+      href: teaching.html
+    - text: "CV"
+      href: cv.html
