--- a/_site.yml
+++ b/_site.yml
@@ -4,7 +4,10 @@ navbar:
    left:
     - text: "Sarah George"
       href: index.html
+    - text: "Research"
+      href: research.html
     - text: "Teaching"
       href: teaching.html
     - text: "CV"
       href: cv.html
+   
